--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Prairie Provinces -- Fiction'
+- GITenberg
 title: Hawtrey's Deputy
 url: http://www.gutenberg.org/ebooks/27601
